<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- halaman_pelacakan strings -->

    <string name="app_name">Utama 2</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="order_history_string">Order History</string>
    <string name="order_status_string">Order Status</string>
    <string name="andi_sujadi_string">Andi Sujadi</string>
    <string name="rp_29_000___bank_transfer_string">Rp 29.000 | Bank Transfer</string>
    <string name="delivery_partner_string">Delivery Partner</string>
    <string name="view_order_string">View Order</string>
    <string name="order_confirmed_string">Order Confirmed</string>
    <string name="pickup_arranged_string">Pickup Arranged</string>
    <string name="laundry_in_process_string">Laundry in Process</string>
    <string name="out_of_delivery_string">Out of Delivery</string>
    <string name="delivered_string">Delivered</string>
    <string name="confirmed_on_20_jan__11_34_pm_string">Confirmed on 20 Jan, 11:34 PM</string>
    <string name="make_your_laundry_ready_to_pick_string">Make your laundry ready to pick</string>
    <string name="your_laundry_task_is_in_process_string">Your laundry task is in process</string>
    <string name="your_laundry_is_out_for_delivery_string">Your laundry is out for delivery</string>
    <string name="your_laundry_has_been_delivered_string">Your laundry has been delivered</string>
    <string name="order__1254_string">Order #1254</string>
    <string name="_30_des_2018_3_00_pm_string">30-Des-2018 3.00 PM</string>
    <string name="estimated_delivery_in_7_dec_string">Estimated Delivery in 7 Dec</string>
    <string name="my_order_string">My Order</string>
    <string name="order__1255_string">Order #1255</string>
    <string name="estimated_delivery_in_21_dec_string">Estimated Delivery in 21 Dec</string>
    <string name="_30_des_2018_3_00_pm_ek1_string">30-Des-2018 3.00 PM</string>
    <string name="order__1253_string">Order #1253</string>
    <string name="_30_des_2018_3_00_pm_ek2_string">30-Des-2018 3.00 PM</string>
    <string name="estimated_delivery_in_3_nov_string">Estimated Delivery in 3 Nov</string>
    <string name="order__1252_string">Order #1252</string>
    <string name="_30_des_2018_3_00_pm_ek3_string">30-Des-2018 3.00 PM</string>
    <string name="estimated_delivery_in_27_oct_string">Estimated Delivery in 27 Oct</string>
    <string name="order__1251_string">Order #1251</string>
    <string name="_30_des_2018_3_00_pm_ek4_string">30-Des-2018 3.00 PM</string>
    <string name="estimated_delivery_in_5_oct_string">Estimated Delivery in 5 Oct</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <!-- halaman_dashboard strings -->

    <string name="app_name">Page 1</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="services_string">Services</string>
    <string name="welcome_back__string">Welcome Back!</string>
    <string name="get_60__discount_in_premium_laundry_string">Get 60% Discountin Premium Laundry</string>
    <string name="hey_radith__string">Hey Radith!</string>
    <string name="wash___iron_string">Wash &amp; Iron</string>
    <string name="ironing_string">Ironing</string>
    <string name="dry_wash_string">Dry Wash</string>
    <string name="premium_laundry_string">Premium Laundry</string>
    <string name="grab_the_deal__string">Grab the Deal!</string>
    <string name="search_for_a_servies_and_package____string">Search for a servies and package...</string>

    <!-- halaman_pemesanan strings -->

    <string name="app_name2">Page 1</string>
    <string name="ek_img_content2">ExportKit Image</string>
    <string name="order_string">Order</string>
    <string name="your_clothes_string">Your Clothes</string>
    <string name="payment_string">Payment</string>
    <string name="t_shirt_string">T-Shirt</string>
    <string name="gold_member_string">Gold Member</string>
    <string name="_5_string">5</string>
    <string name="rp_500_string">Rp 500</string>
    <string name="man_string">Man</string>
    <string name="___string">-</string>
    <string name="___ek1_string">+</string>
    <string name="pants_string">Pants</string>
    <string name="_3_string">3</string>
    <string name="rp_500_ek1_string">Rp 500</string>
    <string name="man_ek1_string">Man</string>
    <string name="___ek2_string">-</string>
    <string name="___ek3_string">+</string>
    <string name="comments_string">Comments</string>
    <string name="outerwear_string">Outerwear</string>
    <string name="_1_string">1</string>
    <string name="rp_500_ek2_string">Rp 500</string>
    <string name="man_ek2_string">Man</string>
    <string name="___ek4_string">-</string>
    <string name="___ek5_string">+</string>
    <string name="tolong_untuk_rapih_ya_____string">Tolong untuk rapih ya....</string>
    <string-array name="jenis_pakaian_array">
        <item>Pakaian Biasa</item>
        <item>Pakaian Berat</item>
        <item>Pakaian Khusus</item>
    </string-array>
    <string name="add_schedule">Add Schedule</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- halaman_pelacakan strings -->
    <string name="ek_img_content">ExportKit Image</string>
    <string name="order_history_string">Order History</string>
    <string name="order_status_string">Order Status</string>
    <string name="andi_sujadi_string">Andi Sujadi</string>
    <string name="rp_29_000___bank_transfer_string">Rp 29.000 | Bank Transfer</string>
    <string name="delivery_partner_string">Delivery Partner</string>
    <string name="view_order_string">View Order</string>
    <string name="order_confirmed_string">Order Confirmed</string>
    <string name="pickup_arranged_string">Pickup Arranged</string>
    <string name="laundry_in_process_string">Laundry in Process</string>
    <string name="out_of_delivery_string">Out of Delivery</string>
    <string name="delivered_string">Delivered</string>
    <string name="confirmed_on_20_jan__11_34_pm_string">Confirmed on 20 Jan, 11:34 PM</string>
    <string name="make_your_laundry_ready_to_pick_string">Make your laundry ready to pick</string>
    <string name="your_laundry_task_is_in_process_string">Your laundry task is in process</string>
    <string name="your_laundry_is_out_for_delivery_string">Your laundry is out for delivery</string>
    <string name="your_laundry_has_been_delivered_string">Your laundry has been delivered</string>
    <string name="order__1254_string">Order #1254</string>
    <string name="_30_des_2018_3_00_pm_string">30-Des-2018 3.00 PM</string>
    <string name="estimated_delivery_in_7_dec_string">Estimated Delivery in 7 Dec</string>
    <string name="my_order_string">My Order</string>
    <string name="order__1255_string">Order #1255</string>
    <string name="estimated_delivery_in_21_dec_string">Estimated Delivery in 21 Dec</string>
    <string name="_30_des_2018_3_00_pm_ek1_string">30-Des-2018 3.00 PM</string>
    <string name="order__1253_string">Order #1253</string>
    <string name="_30_des_2018_3_00_pm_ek2_string">30-Des-2018 3.00 PM</string>
    <string name="estimated_delivery_in_3_nov_string">Estimated Delivery in 3 Nov</string>
    <string name="order__1252_string">Order #1252</string>
    <string name="_30_des_2018_3_00_pm_ek3_string">30-Des-2018 3.00 PM</string>
    <string name="estimated_delivery_in_27_oct_string">Estimated Delivery in 27 Oct</string>
    <string name="order__1251_string">Order #1251</string>
    <string name="_30_des_2018_3_00_pm_ek4_string">30-Des-2018 3.00 PM</string>
    <string name="estimated_delivery_in_5_oct_string">Estimated Delivery in 5 Oct</string>
</resources>